--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "npm run build:index && next build",
     "start": "next start",
     "lint": "eslint",
+    "test": "vitest",
     "build:index": "tsx src/scripts/generate-index.ts"
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
@@ -21,14 +23,20 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "jsdom": "^28.0.0",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   }
 }
